--- a/style.css
+++ b/style.css
@@ -246,3 +246,19 @@ pointer-events: none;
 	position: fixed;
 	width: 100%;
 }
+#up{
+	/* background-color: black; */
+	width: 100%;
+	height: 20px;
+	position: fixed;
+	margin-top: 105%;
+	
+}
+#arrow{
+	margin-right: 10%;
+	float: right;
+	background-color: black;
+	border-radius: 50%;
+	color: white;
+	padding: 10px;
+}
