--- a/style.css
+++ b/style.css
@@ -256,9 +256,8 @@ pointer-events: none;
 #arrow{
 	margin-right: 10%;
 	float: right;
-	background-color: black;
 	border-radius: 50%;
-	
+	background-color: rgb(0, 0, 0);
 	color: white;
 	padding: 10px;
 }
@@ -269,7 +268,7 @@ pointer-events: none;
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #007bff;
+    background-color: #007bff18;
     color: #fff;
     border: none;
     border-radius: 50%;
