--- a/style.css
+++ b/style.css
@@ -338,8 +338,10 @@ iframe {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 10%;
-    width: 10%;
+    height: 100%;
+    width: 100%;
+	z-index: 1;
+	background-color: #000 !important;
 }
 
 
