--- a/style.css
+++ b/style.css
@@ -369,3 +369,14 @@ li.nav-item a:hover{
 li.nav-item a{
 	padding-left: 10px;
 }
+
+#img1{
+    width:300px;
+    transition:transform .2s ease-in-out;
+}
+    #img1:hover{transform:scale(1.2);cursor:zoom-in}
+    h3{
+    margin-left: 0 !important;
+    }
+
+
