--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ a {
 #body {
 	width: 100%;
 	/* color: #fff; */
-   padding-left: 1.5rem;
+   padding-left: 1.5rem;   
 }
 
 #image,
@@ -380,3 +380,12 @@ li.nav-item a{
     }
 
 
+body{
+	/* background: url(img/vel_bg.png) repeat; */
+}
+/* #body{
+	background-color: white;
+	opacity: 0.6;
+	color: black;
+	font-weight: bold;
+} */
