changed c in css

--- a/style.css
+++ b/style.css
@@ -380,9 +380,9 @@ li.nav-item a{
     }
 
 
-body{
-	/* background: url(img/vel_bg.png) repeat; */
-}
+/* body{
+	background: url(img/vel_bg.png) repeat;
+} */
 /* #body{
 	background-color: white;
 	opacity: 0.6;
