--- a/style.css
+++ b/style.css
@@ -380,15 +380,15 @@ li.nav-item a{
     }
 
 
-/* body{
+ body{
 	background: url(img/vel_bg.png) repeat;
-} */
-/* #body{
+} 
+ #body{
 	background-color: white;
 	opacity: 0.6;
 	color: black;
 	font-weight: bold;
-} */
+} 
 
 
 #share{
