--- a/style.css
+++ b/style.css
@@ -381,13 +381,13 @@ li.nav-item a{
 
 
  body{
-	background: url(img/vel_bg.png) repeat;
+	background: url(img/vel_bg.png) repeat !important;
 } 
  #body{
-	background-color: white;
-	opacity: 0.6;
-	color: black;
-	font-weight: bold;
+	background-color: white !important;
+	opacity: 0.6 !important;
+	color: black !important;
+	font-weight: bold !important;
 } 
 
 
