--- a/style.css
+++ b/style.css
@@ -378,7 +378,7 @@ li.nav-item a{
     h3{
     margin-left: 0 !important;
     }
-
+<!--
 
  body{
 	background: url("https://aman5062.github.io/helpdesk2/img/vel_bg.png") repeat !important;
@@ -390,7 +390,7 @@ li.nav-item a{
 	color: black !important;
 	font-weight: bold !important;
 } 
-
+-->
 
 #share{
 	position: absolute;
